deployments/workloads/media/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:latest
          ports:
            - containerPort: 3000
        - name: filebrowser
          image: filebrowser/filebrowser
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nfs-media
              mountPath: /srv/media-data
            - name: nfs-configs
              mountPath: /srv/media-configs
            - name: nfs-configs
              mountPath: /database
              subPath: filebrowser/database
            - name: nfs-configs
              mountPath: /config
              subPath: filebrowser/config
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name: nfs-media
          nfs:
            server: truenas
            path: /mnt/bigdata/kubernetes/media/data
            readOnly: false
        - name: nfs-configs
          nfs:
            server: truenas
            path: /mnt/fast/media-configs
            readOnly: false
