deployments/workloads/media/filebrowser/cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: filebrowser
spec:
  endpointSelector:
    matchLabels:
      app: filebrowser
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8080"
